; ModuleID = '/home/carl/AnghaBench/numpy/numpy/linalg/lapack_lite/extr_f2c_d_lapack.c_dlapy3_.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/linalg/lapack_lite/extr_f2c_d_lapack.c_dlapy3_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dlapy3_.w = internal global i32 0, align 4
@dlapy3_.xabs = internal global i32 0, align 4
@dlapy3_.yabs = internal global i32 0, align 4
@dlapy3_.zabs = internal global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dlapy3_(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @abs(i32 %12) #3
  store i32 %13, i32* @dlapy3_.xabs, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @abs(i32 %15) #3
  store i32 %16, i32* @dlapy3_.yabs, align 4
  %17 = load i32*, i32** %6, align 8
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @abs(i32 %18) #3
  store i32 %19, i32* @dlapy3_.zabs, align 4
  %20 = load i32, i32* @dlapy3_.xabs, align 4
  %21 = load i32, i32* @dlapy3_.yabs, align 4
  %22 = call i32 @max(i32 %20, i32 %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* @dlapy3_.zabs, align 4
  %25 = call i32 @max(i32 %23, i32 %24)
  store i32 %25, i32* @dlapy3_.w, align 4
  %26 = load i32, i32* @dlapy3_.w, align 4
  %27 = sitofp i32 %26 to double
  %28 = fcmp oeq double %27, 0.000000e+00
  br i1 %28, label %29, label %35

29:                                               ; preds = %3
  %30 = load i32, i32* @dlapy3_.xabs, align 4
  %31 = load i32, i32* @dlapy3_.yabs, align 4
  %32 = add nsw i32 %30, %31
  %33 = load i32, i32* @dlapy3_.zabs, align 4
  %34 = add nsw i32 %32, %33
  store i32 %34, i32* %7, align 4
  br label %59

35:                                               ; preds = %3
  %36 = load i32, i32* @dlapy3_.xabs, align 4
  %37 = load i32, i32* @dlapy3_.w, align 4
  %38 = sdiv i32 %36, %37
  store i32 %38, i32* %8, align 4
  %39 = load i32, i32* @dlapy3_.yabs, align 4
  %40 = load i32, i32* @dlapy3_.w, align 4
  %41 = sdiv i32 %39, %40
  store i32 %41, i32* %9, align 4
  %42 = load i32, i32* @dlapy3_.zabs, align 4
  %43 = load i32, i32* @dlapy3_.w, align 4
  %44 = sdiv i32 %42, %43
  store i32 %44, i32* %10, align 4
  %45 = load i32, i32* @dlapy3_.w, align 4
  %46 = load i32, i32* %8, align 4
  %47 = load i32, i32* %8, align 4
  %48 = mul nsw i32 %46, %47
  %49 = load i32, i32* %9, align 4
  %50 = load i32, i32* %9, align 4
  %51 = mul nsw i32 %49, %50
  %52 = add nsw i32 %48, %51
  %53 = load i32, i32* %10, align 4
  %54 = load i32, i32* %10, align 4
  %55 = mul nsw i32 %53, %54
  %56 = add nsw i32 %52, %55
  %57 = call i32 @sqrt(i32 %56)
  %58 = mul nsw i32 %45, %57
  store i32 %58, i32* %7, align 4
  br label %59

59:                                               ; preds = %35, %29
  %60 = load i32, i32* %7, align 4
  ret i32 %60
}

; Function Attrs: nounwind readnone
declare dso_local i32 @abs(i32) #1

declare dso_local i32 @max(i32, i32) #2

declare dso_local i32 @sqrt(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
